--- a/about.qmd
+++ b/about.qmd
@@ -33,7 +33,7 @@ Seattle Central College, Seattle \| Seattle, WA \|A.S Associate in Science Trans
 -   Implemented python program to discover inconsistencies and ensure clean and accurate data.
 -   Streamlined data collection and storage by creating a system of naming and compiling information for easier accessibility and data analysis.
 
-**Seattle Central College \| Mathematics Tutor \| Seattle, WA October 2019 - August 2021**
+**Seattle Central College \| Mathematics Tutor \| Seattle, WA \| October 2019 - August 2021**
 
 -   Specialize as an individual tutor, simplify math concepts, and coach students to think critically to solve problems.
 -   Improve tutee comprehension and increased competence while fostering confidence for success. Maintained a 98% tutee satisfaction rating.\
@@ -41,7 +41,7 @@ Seattle Central College, Seattle \| Seattle, WA \|A.S Associate in Science Trans
 
 ## Leadership + Volunteering
 
-**President of WiSE Club \| Women in Science and Engineering \| Seattle Central College February 2019 -- March 2020**
+**President of WiSE Club \| Women in Science and Engineering \| Seattle Central College\| February 2019 -- March 2020**
 
 -   Coordinated fifteen professional engineers and three Seattle Central alumni and 30 volunteers and a student audience of 165+ for Engineering Mentor Night.
 -   Planned, created, and implemented highly effective club plans and agendas while informing club members.
