--- a/index.qmd
+++ b/index.qmd
@@ -1,12 +1,12 @@
 ---
-title: "Data Science Projects"
+title: "Data Portfolio"
 listing:
   contents: posts
   sort: "date desc"
-  type: default
+  type: grid
   categories: true
   sort-ui: false
-  filter-ui: false
+  filter-ui: true
 page-layout: full
 title-block-banner: true
 ---
