--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,8 @@
 ---
-title: "Data Portfolio"
+title: "Becca Barbanell : Data Portfolio"
+format: 
+  html: 
+    smooth-scroll: true
 listing:
   contents: posts
   sort: "date desc"
@@ -8,7 +11,7 @@ listing:
   sort-ui: false
   filter-ui: true
 page-layout: full
-title-block-banner: true
+title-block-banner: false
 ---
 
 
