--- a/about.qmd
+++ b/about.qmd
@@ -18,11 +18,11 @@ Becca Barbanell gives creative insight into data science and approaches it holis
 
 ## Education
 
-Willamette University, Portland \| Portland, OR Masters in Data Science \| August 2021 - August 2023
+Willamette University \| Portland, OR \| <b>Masters in Data Science</b> \| August 2021 - August 2023
 
-Willamette University, Salem \| Salem, OR B.S in Data Science \| August 2021 - May 2023
+Willamette University \| Salem, OR \| <b>B.S in Data Science</b> \| August 2021 - May 2023
 
-Seattle Central College, Seattle \| Seattle, WA \|A.S Associate in Science Transfer\| March 2020
+Seattle Central College \| Seattle, WA \|<b> A.S Associate in Science Transfer</b>\| March 2020
 
 ## Experience
 
