--- a/posts/NOB/index.qmd
+++ b/posts/NOB/index.qmd
@@ -11,3 +11,12 @@ comments:
       issue-term: title
       
 ---
+
+
+
+![Professor Scott Pike,Soil collection fig.2](17a.jpg)
+
+
+
+![Professor Scott Pike,Soil collection fig.1](19aa.jpg)
+
