--- a/posts/NOB/index.qmd
+++ b/posts/NOB/index.qmd
@@ -4,7 +4,7 @@ title: "Ness of Brodgar a Neoglithic Archeology Site in Orkney Scotland"
 author: "Becca Barbanell "
 date: "2023-02-27"
 categories: [RShiny, Archeology, Database, Scotland, Neoglithic]
-image: "19aa.jpg"
+image: "17a.jpg"
 comments: 
     utterances: 
       repo: quarto-dev/quarto-web
@@ -15,9 +15,9 @@ comments:
 
 
 
-![Professor Scott Pike,Soil collection fig.2](17a.jpg)
+![Professor Scott Pike,Soil collection fig.1](17a.jpg)
 
 
 
-![Professor Scott Pike,Soil collection fig.1](19aa.jpg)
+![Professor Scott Pike,Soil collection fig.2](19aa.jpg)
 
