--- a/posts/NOB/index.qmd
+++ b/posts/NOB/index.qmd
@@ -13,11 +13,12 @@ comments:
       
 ---
 
+:::
+
+![Professor Scott Pike, Soil collection of Hearth Structure 8, fig.1](17a.jpg)
 
 
-![Professor Scott Pike,Soil collection fig.1](17a.jpg)
 
+![Professor Scott Pike,Soil Soil collection of Hearth Structure 8, fig. 2](19aa.jpg)
 
-
-![Professor Scott Pike,Soil collection fig.2](19aa.jpg)
-
+:::
